<resources>
    <string name="app_name">Internship Multiple Choice</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="server_clientid">613733489888-lt00i6lur387vgjceau107t01oo8d5d6.apps.googleusercontent.com</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correct_size_zero">Đúng</string>
    <string name="correct_show">Đúng (Bấm để hiển thị)</string>
    <string name="correct_hide">Đúng (Bấm để dừng hiển thị)</string>

    <string name="incorrect_size_zero">Sai</string>
    <string name="incorrect_show">Sai (Bấm để hiển thị)</string>
    <string name="incorrect_hide">Sai (Bấm để dừng hiển thị)</string>


    <string name="notchosen_size_zero">Chưa làm</string>
    <string name="notchosen_show">Chưa làm (Bấm để hiển thị)</string>
    <string name="notchosen_hide">Chưa làm (Bấm để dừng hiển thị)</string>
    <string name="score">Điểm</string>

    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="id">Id</string>
    <string name="Name">Tên</string>
    <string name="login">Đăng nhập</string>
    <string name="loginguest">Tiếp tục với tư cách là khách</string>
    <string name="signup">Đăng ký</string>
    <string name="bank">Ngân hàng câu hỏi</string>
    <string name="exam">Làm bài thi thử</string>
    <string name="examhistory">Lịch sử làm bài</string>
    <string name="userinfo">Thông tin tài khoản</string>
    <string name="signout">Đăng xuất</string>
    <string name="info">info</string>
    <string name="timer">Thời gian làm bài</string>
    <string name="finish">Hoàn thành</string>
    <string name="hasDone">Đã làm</string>
    <string name="doBank">Trả lời câu hỏi từ ngân hàng câu hỏi</string>
    <string name="doExam">Làm một bài thi từ ngân hàng câu hỏi</string>
</resources>