<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/lightGrey"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"></TextView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/ExamContent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ExamScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/lightGrey"

            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/ExamScoreContent"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"></TextView>

            <TextView
                android:id="@+id/ExamScoreText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/ExamScoreContent"

                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/score"></TextView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/CorrectAnswerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CorrectAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGrey"
                android:minHeight="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"

                android:paddingBottom="10dp"
                android:text="@string/correct_show"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/CorrectAnswerList"
                android:layout_width="match_parent"
                android:layout_height="0dp"></androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/IncorrectAnswerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/IncorrectAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGrey"
                android:minHeight="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"

                android:paddingBottom="10dp"
                android:text="@string/incorrect_show"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/IncorrectAnswerList"
                android:layout_width="match_parent"
                android:layout_height="0dp"></androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/NotChosenLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NotChosen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGrey"
                android:minHeight="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/notchosen_show"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/NotChosenList"
                android:layout_width="match_parent"
                android:layout_height="0dp"></androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
